feat: C++ HPC engine + Python package restructure

--- a/notebooks/01_brk_a_01_topopt.ipynb
+++ b/notebooks/01_brk_a_01_topopt.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f2328822",
    "metadata": {},
    "outputs": [
@@ -45,11 +45,11 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
-    "# Moduli progetto\n",
-    "from src.geometry import create_bracket_domain, VoxelDomain\n",
-    "from src.loads import create_brk_a_01_static_case_1, LoadCase\n",
-    "from src.fem import MaterialProperties\n",
-    "from src.topopt import SIMPOptimizer, SIMPParams, TOResult\n",
+    "# Moduli progetto (nuova struttura pacchetto)\n",
+    "from src.am.core.geometry import create_bracket_domain, VoxelDomain\n",
+    "from src.am.core.loads import create_brk_a_01_static_case_1, LoadCase\n",
+    "from src.am.numerical.fem import MaterialProperties\n",
+    "from src.am.numerical.topopt import SIMPOptimizer, SIMPParams, TOResult\n",
     "\n",
     "print(\"Imports completati ✓\")"
    ]
